[gd_scene load_steps=19 format=3 uid="uid://bygv60003uc5w"]

[ext_resource type="PackedScene" uid="uid://bxbkpou8fdoqo" path="res://game/actors/enemies/enemy.tscn" id="1_sp3te"]
[ext_resource type="Script" path="res://game/actors/enemies/ranged_enemy/ranged_enemy.gd" id="2_jelv1"]
[ext_resource type="PackedScene" uid="uid://dxp66elq3n42f" path="res://game/actors/enemies/ranged_enemy/sk_ranged_enemy.tscn" id="3_h5lxi"]
[ext_resource type="BehaviorTree" uid="uid://r3tx27cwxvor" path="res://ai/ranged_enemy_behavior_tree.tres" id="3_t65xn"]
[ext_resource type="Script" path="res://game/actors/abilities/ranged_ability.gd" id="4_c63db"]
[ext_resource type="Script" path="res://common/components/templates/HitBoxComponent3D.gd" id="5_ppqif"]
[ext_resource type="AudioStream" uid="uid://ckowmddtj51mk" path="res://game/actors/enemies/sfx/aud_enemy_ranged_hurt_1.wav" id="7_oqj4d"]
[ext_resource type="AudioStream" uid="uid://bm78bfkp01bn6" path="res://game/actors/enemies/sfx/aud_enemy_ranged_hurt_2.wav" id="8_1wdvv"]
[ext_resource type="AudioStream" uid="uid://dguwhb42oddu" path="res://game/actors/enemies/sfx/aud_enemy_ranged_hurt_3.wav" id="9_5mvxe"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_syuwp"]

[sub_resource type="BoxMesh" id="BoxMesh_uaspe"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mtyox"]

[sub_resource type="BlackboardPlan" id="BlackboardPlan_shc20"]

[sub_resource type="Curve3D" id="Curve3D_x2m00"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -0.516856, -5.29899),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_njpa4"]
albedo_color = Color(0, 0, 0, 1)
emission_enabled = true
emission = Color(0, 0, 1, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_g07x1"]
height = 1.2709
radius = 0.0763196

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mh05o"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8urs6"]
streams_count = 3
stream_0/stream = ExtResource("7_oqj4d")
stream_1/stream = ExtResource("8_1wdvv")
stream_2/stream = ExtResource("9_5mvxe")

[node name="RangedEnemy" groups=["Enemy"] instance=ExtResource("1_sp3te")]
collision_layer = 8
collision_mask = 15
script = ExtResource("2_jelv1")
telegraph_duration = 0.0
telegraph_starting_radius = 0.0
telegraph_to_beam_delay = 0.0
beam_duration = 0.0
beam_radius = 0.0
is_active = true
speed = 5
turning_speed = 4.0

[node name="Visual" type="Node3D" parent="." index="0"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Visual" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_syuwp")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Visual" index="1"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 1.4821, -0.378365)
visible = false
mesh = SubResource("BoxMesh_uaspe")
skeleton = NodePath("../..")

[node name="sk_ranged_enemy" parent="Visual" index="2" instance=ExtResource("3_h5lxi")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="Visual/sk_ranged_enemy/PlantLoverRig" index="0"]
bones/0/position = Vector3(1.4319e-09, 0.94856, -0.0293553)
bones/0/rotation = Quaternion(0.125841, 1.18262e-07, 1.50014e-08, 0.99205)
bones/1/rotation = Quaternion(-0.0646886, -0.0204229, 0.00387698, 0.997689)
bones/2/rotation = Quaternion(-0.0772798, -2.86681e-15, -1.8425e-08, 0.997009)
bones/3/rotation = Quaternion(-0.000268575, -1.19209e-07, -3.20164e-11, 1)
bones/4/rotation = Quaternion(0.110986, 1.18473e-07, 1.32306e-08, 0.993822)
bones/5/rotation = Quaternion(-0.0786743, -1.1884e-07, -9.37871e-09, 0.9969)
bones/9/rotation = Quaternion(-0.280507, 0.65292, -0.565892, 0.418065)
bones/10/rotation = Quaternion(0.0110866, 0.0169464, -0.0645803, 0.997707)
bones/11/rotation = Quaternion(-0.00986218, 0.0250509, 0.0685122, 0.997287)
bones/12/rotation = Quaternion(0.108093, 0.670281, -0.0996032, 0.727405)
bones/14/rotation = Quaternion(0.0216492, -0.00400141, -0.198154, 0.979924)
bones/15/rotation = Quaternion(-0.60402, 0.345103, 0.356717, 0.623551)
bones/16/rotation = Quaternion(-0.271591, -0.656627, 0.560074, 0.425907)
bones/17/rotation = Quaternion(0.012144, -0.0167482, 0.13367, 0.99081)
bones/18/rotation = Quaternion(-0.00986218, -0.0250509, -0.0685122, 0.997287)
bones/19/rotation = Quaternion(0.108093, -0.670281, 0.0996032, 0.727405)
bones/20/rotation = Quaternion(-0.389044, 0.886197, 0.238011, -0.0815445)
bones/21/rotation = Quaternion(0.0216492, 0.00400141, 0.198154, 0.979924)
bones/22/rotation = Quaternion(0.992267, -0.00430627, 0.000531032, 0.124046)
bones/23/rotation = Quaternion(0.00817258, 0.000933297, -0.0217655, 0.999729)
bones/24/rotation = Quaternion(-0.503206, -0.00948205, 0.0146535, 0.86399)
bones/25/rotation = Quaternion(-0.222846, 0.956579, -0.177629, -0.0611902)
bones/27/rotation = Quaternion(0.992267, 0.00430623, -0.000530792, 0.124046)
bones/28/rotation = Quaternion(0.00817257, -0.000933291, 0.0217655, 0.999729)
bones/29/rotation = Quaternion(-0.503206, 0.00948206, -0.0146535, 0.86399)
bones/30/rotation = Quaternion(0.222846, 0.956579, -0.177628, 0.0611901)

[node name="PlantLoverHat" parent="Visual/sk_ranged_enemy/PlantLoverRig/Skeleton3D" index="0"]
transform = Transform3D(0.999135, -3.49246e-10, -0.0415663, -3.46303e-10, 0.999999, -4.47035e-08, 0.0415664, 1.86265e-08, 0.999135, -0.000300352, 5.96046e-07, -6.17979e-06)

[node name="PlantLoverHead" parent="Visual/sk_ranged_enemy/PlantLoverRig/Skeleton3D" index="1"]
transform = Transform3D(0.999135, -3.49246e-10, -0.0415663, -3.46303e-10, 0.999999, -4.47035e-08, 0.0415664, 1.86265e-08, 0.999135, -0.000300352, 5.96046e-07, -6.17979e-06)

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="1" groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_mtyox")

[node name="BTPlayer" type="BTPlayer" parent="." index="2"]
behavior_tree = ExtResource("3_t65xn")
blackboard_plan = SubResource("BlackboardPlan_shc20")
unique_name_in_owner = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="3"]
unique_name_in_owner = true
target_desired_distance = 2.0
path_max_distance = 1.01
debug_enabled = true

[node name="HealthComponent" parent="." index="4"]
max_health = 60.0
health = 60.0

[node name="DamageLabel" parent="." index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13085, 0)
lifetime = 1.5

[node name="RangedAbility" type="Node3D" parent="." index="6"]
unique_name_in_owner = true
script = ExtResource("4_c63db")
hitting_color = Color(0, 0, 1, 1)

[node name="BeamRay" type="RayCast3D" parent="RangedAbility" index="0"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, -5)
collision_mask = 258
collide_with_areas = true
debug_shape_thickness = 5

[node name="BeamStart" type="Marker3D" parent="RangedAbility" index="1"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false

[node name="Path3D" type="Path3D" parent="RangedAbility/BeamStart" index="0"]
unique_name_in_owner = true
curve = SubResource("Curve3D_x2m00")

[node name="PathFollow3D" type="PathFollow3D" parent="RangedAbility/BeamStart/Path3D" index="0"]
unique_name_in_owner = true
transform = Transform3D(0.999999, 0, 0, 0, 0.995275, 0.0970777, 0, -0.0970777, 0.995275, 0, -0.228285, -2.34046)
progress = 2.35164

[node name="TelegraphShape" type="CSGCylinder3D" parent="RangedAbility/BeamStart/Path3D/PathFollow3D" index="0"]
unique_name_in_owner = true
transform = Transform3D(1.91069e-15, 4.37115e-08, -1, 1, -4.37115e-08, 0, -4.37115e-08, -1, -4.37114e-08, 0, 0, 0)
collision_layer = 0
collision_mask = 256
radius = 0.1
material = SubResource("StandardMaterial3D_njpa4")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="RangedAbility/BeamStart/Path3D/PathFollow3D" index="1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false

[node name="HitBoxComponent3D" type="Area3D" parent="RangedAbility" index="2" node_paths=PackedStringArray("sender")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
collision_layer = 0
collision_mask = 256
monitoring = false
script = ExtResource("5_ppqif")
sender = NodePath("../..")
amount = 10.0
is_one_shot = true
active = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="RangedAbility/HitBoxComponent3D" index="0"]
unique_name_in_owner = true
shape = SubResource("CylinderShape3D_g07x1")

[node name="GPUParticlesCollisionBox3D" type="GPUParticlesCollisionBox3D" parent="." index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.78052, 1.45874, -8.95744)
size = Vector3(15.2944, 4.91748, 2)

[node name="DamageLabelEmitter" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.282073, 0)

[node name="HurtBoxComponent3D" parent="." index="9" groups=["Enemy"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBoxComponent3D" index="0" groups=["Enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.958669, 0)
shape = SubResource("CapsuleShape3D_mh05o")

[node name="enemy_sfx" parent="." index="10"]
hurts = SubResource("AudioStreamRandomizer_8urs6")

[node name="vocal_player" parent="enemy_sfx" index="1"]
volume_db = -8.0

[editable path="Visual/sk_ranged_enemy"]
[editable path="enemy_sfx"]
